2009-02-02  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpxpak.c (lpxpak_parse_fd): returns EBADFD instead of
	EINVAL if the fd is not opened for reading.

	* t/Makefile (atom_test, xpak_test, test): simple test target added.

2009-02-01  Lars Hartmann  <lars (at) chaotika (dot) org>

	Updated Copyright statements:
	* COPYING: added.
	* doc/xpak.txt: added 2009.

2009-01-31  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblputil.c (lputil_intlen): integer overflow

	Fixed memleaks:
	* lib/liblpatom.c (lpatom_get_version): fixed memleak.
	* lib/liblpxpak.c (lpxpak_parse_fd): fixed memleak.

	Made Doxygen work again:
	* doxygen/api-doc: added path to include files.
	* doxygen/dev-doc: added path to include files.
	* Makefile: added variable paths.

	Code Cleanup according to Hayati Ayguen's code review:
	* lib/liblpxpak.c (lpxpak_index_init): split up into
	lpxpak_index_create() and lpxpak_index_init().
	(lpxpak_index_create): added.
	(lpxpak_index_resize): changed to use lpxpak_init.
	(lpxpak_init): split up into lpxpak_create() and lpxpak_init().
	(lpxpak_create): added.
	(lpxpak_blob_init): split up into lpxpak_blob_create() and
	lpxpak_blob_init().
	(lpxpak_blob_create): added.
	* lib/liblpatom.c (lpatom_cmp): rewritten from scratch.
	(lpatom_get_fullname): cleaned up
	(lpatom_get_version): rewritten from scratch.
	(lpatom_get_suffix): rewritten from scratch.
	(lpatom_init): split up into lpatom_create() and lpatom_init().
	(lpatom_create): added.
	* include/liblpatom.h (lpatom_sufe_t): extended documentation.

2009-01-30  Lars Hartmann  <lars (at) chaotika (dot) org>

	* t/xpak_test.c: cleaned up includes

	Moved doxygen make targets:
	* t/Makefile: deleted doxygen targets
	* Makefile: moved doxygen targets here.

	Moved header files to directory "include" :
	* t/Makefile (INCS): changed to new header path.
	* lib/Makefile (INCS): changed to new header path.
	* lib/liblpatom.h: moved.
	* lib/liblpxpak.h: moved.
	* lib/liblputil.h: moved.
